# summarify

./: .gitignore  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/application/summary/: use_cases.py
apps/api/src/application/transcription/: use_cases.py
apps/api/src/core/: config.py  job_store.py  logging.py  session_store.py
apps/api/src/domain/summary/: ports.py
apps/api/src/domain/transcription/: ports.py
apps/api/src/infrastructure/summary/: groq_service.py  ollama_service.py  openai_service.py
apps/api/src/infrastructure/transcription/: whisper_service.py
apps/api/src/presentation/summary/: router.py  schemas.py
apps/api/src/presentation/transcription/: router.py  schemas.py  sse_formatter.py
apps/api/src/tests/: test_summary_router.py  test_summary_use_case.py  test_transcribe_use_case.py  test_upload_router.py
apps/web/: orval.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/features/audio-upload/components/: AudioUploadForm.tsx  LanguageSelect.tsx  TranscriptionActions.tsx  TranscriptionViewer.tsx  UploadForm.tsx
apps/web/src/features/audio-upload/hooks/: useTranscriptionSSE.ts  useUploadMutation.ts
apps/web/src/features/audio-upload/utils/: validateAudioFile.ts
apps/web/src/shared/api/: schemas.ts  summarifyAPI.schemas.ts
apps/web/src/shared/api/summary/: summary.ts
apps/web/src/shared/lib/: axios-instance.ts
(+11 files in other folders)
