[project]
name = "summarify-api"
version = "0.1.0"
description = "Summarify backend — transcription et resume audio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "groq>=1.1.2",
    "openai>=2.31.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
# Toutes les fonctions async sont testees automatiquement
[tool.ruff]
line-length = 88
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
# E = pycodestyle errors, F = pyflakes, I = isort
# N = naming conventions, UP = pyupgrade, B = bugbear, SIM = simplifications
[tool.mypy]
python_version = "3.11"
strict = true # Equivalent de TypeScript strict: true
